# cookiecutter-conda-python

./: .gitignore  LICENSE  README.md
{{cookiecutter.repo_name}}/: .gitignore  pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: _version.py  cli.py
